--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ button:hover{
 
 .content_tagesablauf{
   position: absolute;
-  top: 61rem;
+  top: 55rem;
   left: 2rem;
   transform: translateY(-50%);
 }
@@ -166,6 +166,31 @@ button:hover{
   margin-bottom: 1.5rem;
 }
 
+.content_anfahrt{
+  position: absolute;
+  top: 103rem;
+  left: 0rem;
+  transform: translateY(-50%);
+}
+.content_anfahrt h1{
+  font-size: 4rem;
+  color: #262728;
+  line-height: 4rem;
+  margin-bottom: 1.5rem;
+}
+.content_anfahrt h3{
+  color: #00bf9f;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1.5rem;
+}
+.content_anfahrt p{
+  font-size: 0.8rem;
+  color: #585858;
+  line-height: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+
 .box-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,7 +207,7 @@ button:hover{
   padding-top: 0;
   padding-bottom: 0;
   padding-left: 3.5rem;
-  padding-bottom: 3rem;
+  padding-bottom: 0rem;
   border-left: 0.1rem solid #aaa;
   position: relative;
 }
