--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ button:hover{
 
 .content_tagesablauf{
   position: absolute;
-  top: 55rem;
+  top: 61rem;
   left: 2rem;
   transform: translateY(-50%);
 }
@@ -168,8 +168,8 @@ button:hover{
 
 .content_anfahrt{
   position: absolute;
-  top: 103rem;
-  left: 0rem;
+  top: 122rem;
+  left: 2rem;
   transform: translateY(-50%);
 }
 .content_anfahrt h1{
@@ -432,6 +432,20 @@ margin-right: 20px;
   opacity: 1;
 }
 
+@media only screen and (min-width: 375px){
+
+  .content_tagesablauf{
+    position: absolute;
+    top: 55rem;
+    left: 2rem;
+    transform: translateY(-50%);
+  }
+
+}
+
+@media only screen and (min-width: 425px) {
+
+}
 
 @media only screen and (min-width: 768px) {
  
