--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ button:hover{
 
 .content_anfahrt{
   position: absolute;
-  top: 137rem;
+  top: 159rem;
   left: 2rem;
   transform: translateY(-50%);
 }
@@ -189,6 +189,37 @@ button:hover{
   color: #585858;
   line-height: 1.2rem;
   margin-bottom: 1.5rem;
+}
+
+.anfahrt-content {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, auto)); */
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.anfahrt-box {
+  padding: 20px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 0.5rem;
+  border-bottom: 2px solid var(--main-color);
+  box-shadow: 0 2px 7px rgb(14 55 54 / 15%);
+}
+.anfahrt-box h3 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0.7rem 0 0.4rem;
+}
+.anfahrt-box .bx {
+  padding-top: 2rem;
+  font-size: 24px;
+}
+.anfahrt-box a {
+  font-weight: 500;
 }
 
 .box-container {
