--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ button:hover{
 
 .content_anfahrt{
   position: absolute;
-  top: 159rem;
+  top: 167rem;
   left: 2rem;
   transform: translateY(-50%);
 }
@@ -193,10 +193,13 @@ button:hover{
 
 .anfahrt-content {
   display: grid;
+  /*display: flex; ab Tablet Ansicht
+
   /* grid-template-columns: repeat(auto-fit, minmax(200px, auto)); */
   justify-content: center;
   gap: 1rem;
   margin-top: 2rem;
+  margin-left: -1.5rem;
 }
 .anfahrt-box {
   padding: 20px;
@@ -219,7 +222,11 @@ button:hover{
   font-size: 24px;
 }
 .anfahrt-box a {
-  font-weight: 500;
+  font-size: 0.8rem;
+  color: #585858;
+  line-height: 1.2rem;
+  margin-bottom: 1.5rem;
+  text-decoration: underline;
 }
 
 .box-container {
