--- a/css/style.css
+++ b/css/style.css
@@ -903,6 +903,25 @@ margin-right: 20px;
   transform: translateY(-50%);
 }
 
+.content_einladung_b{
+  position: absolute;
+  top: 63rem;
+  left: 2rem;
+  transform: translateY(-50%);
+}
+
+.einladung_b-box {
+  padding: 10px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 0.5rem;
+  border-bottom: 2px solid var(--main-color);
+  box-shadow: 0 2px 7px rgb(14 55 54 / 15%);
+}
+
 }
 
 @media only screen and (min-width: 425px) {
@@ -989,6 +1008,25 @@ margin-right: 20px;
       top: 49rem;
       left: 2rem;
       transform: translateY(-50%);
+    }
+
+    .content_einladung_b{
+      position: absolute;
+      top: 66rem;
+      left: 2rem;
+      transform: translateY(-50%);
+    }
+    
+    .einladung_b-box {
+      padding: 10px;
+      width: 355px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      border-radius: 0.5rem;
+      border-bottom: 2px solid var(--main-color);
+      box-shadow: 0 2px 7px rgb(14 55 54 / 15%);
     }
 
 
